# fluid-quantum-logic

./: .gitignore  LICENSE  README.md  pyproject.toml
demonstrations/: 01_zero_shot_logic.py  02_qiskit_validation.py  03_audio_rhythm.py  04_noise_robustness.py  05_bistability.py
paper/: fluid_quantum_logic.md  preamble.tex
src/fluid_quantum_logic/: __init__.py  binding.py  topology.py
